RESOLVED FIXED20549
Resize cursor not shown for some nested framesets.
https://bugs.webkit.org/show_bug.cgi?id=20549
Summary Resize cursor not shown for some nested framesets.
Brad Garcia
Reported 2008-08-27 12:51:30 PDT
A frameset that is 1) nested within another frameset, and 2) is not the first element of that frameset, will not show the "resize" cursor upon mouseover of the resize bar. The frameset is still resizable, it's just that the cursor does not get updated, and remains as the default arrow cursor.
Attachments
Example using framesets with columns. (397 bytes, text/html)
2008-08-27 12:54 PDT, Brad Garcia
no flags
Example using framesets with rows. (397 bytes, text/html)
2008-08-27 12:55 PDT, Brad Garcia
no flags
Fix for bug. (1.42 KB, patch)
2008-08-28 08:46 PDT, Brad Garcia
mitz: review+
Brad Garcia
Comment 1 2008-08-27 12:54:27 PDT
Created attachment 23036 [details] Example using framesets with columns. Example of nested columnar framesets. The bar on the left displays the resize cursor (outermost frame), while the bar on the right does not (the nested frame).
Brad Garcia
Comment 2 2008-08-27 12:55:21 PDT
Created attachment 23037 [details] Example using framesets with rows. For completeness, framesets using rows display the problem as well.
Brad Garcia
Comment 3 2008-08-28 08:46:08 PDT
Created attachment 23054 [details] Fix for bug. This patch does not contain a corresponding test. I do not know how to write a test for this fix. If there is a way, I would appreciate any help in writing one!
mitz
Comment 4 2008-08-28 09:03:34 PDT
Comment on attachment 23054 [details] Fix for bug. r=me. As far as I know there is currently no way to make a layout test for this.
mitz
Comment 5 2008-08-28 10:46:26 PDT
Note You need to log in before you can comment on or make changes to this bug.