2008-08-28  Brad Garcia  <bgarcia@google.com>

Reviewed by Dan Bernstein.

        https://bugs.webkit.org/show_bug.cgi?id=20549
        Correctly determine when cursor is over a resizable border within
        a nested frameset.

        * rendering/RenderFrameSet.cpp:
        (WebCore::RenderFrameSet::canResizeRow):
        (WebCore::RenderFrameSet::canResizeColumn):



Canonical link: https://commits.webkit.org/28376@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@35973 268f45cc-cd09-0410-ab3c-d52691b4dbfc